[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["chencheng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.0"
requests = "^2.32.3"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"
loguru = "^0.7.2"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
